--- a/styles.css
+++ b/styles.css
@@ -84,10 +84,10 @@ footer {
 
 body {
 
-    background-size: cover; /* Ensure the image covers the entire background */
-    background-position: center; /* Center the background image */
+    background-size: cover;
+    background-position: center;
     background-attachment: fixed; /* Optional: Keeps the background image fixed while scrolling */
-    color: white; /* Ensures text remains visible on the image */
+    color: white;
     font-family: 'Berlin Sans FB', Arial, sans-serif;
 }
 
